--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -8,14 +8,9 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/">MobileZilla</a>
+            <a class="navbar-brand" href="#">ezCom</a>
         </div>
-       <form class="navbar-form navbar-left" role="search" action='/searchproduct'>
-         <div class="form-group">
-           <input name="searchquery" type="text" class="form-control" placeholder="Search">
-         </div>
-         <button type="submit" class="btn btn-default">Submit</button>
-       </form>
+
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
