--- a/bin/views/partials/header.hbs
+++ b/bin/views/partials/header.hbs
@@ -8,13 +8,18 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Brand</a>
+            <a class="navbar-brand" href="/">MobileZilla</a>
         </div>
-
+       <form class="navbar-form navbar-left" role="search" action='/searchproduct'>
+         <div class="form-group">
+           <input name="searchquery" type="text" class="form-control" placeholder="Search">
+         </div>
+         <button type="submit" class="btn btn-default">Submit</button>
+       </form>
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="#"><i class="fa fa-shopping-cart" aria-hidden="true"></i> Shopping Cart</a></li>
+                <li><a href="#"><i class="fa fa-shopping-cart" aria-hidden="true"></i>Shopping Cart</a></li>
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-user" aria-hidden="true"></i> User Management <span class="caret"></span></a>
                     <ul class="dropdown-menu">
