--- a/bin/views/partials/header.hbs
+++ b/bin/views/partials/header.hbs
@@ -17,7 +17,7 @@
          <button type="submit" class="btn btn-default">Submit</button>
        </form>
         <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        {{!--<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="#"><i class="fa fa-shopping-cart" aria-hidden="true"></i>Shopping Cart</a></li>
                 <li class="dropdown">
@@ -29,6 +29,6 @@
                     </ul>
                 </li>
             </ul>
-        </div><!-- /.navbar-collapse -->
+        </div><!-- /.navbar-collapse -->--}}
     </div><!-- /.container-fluid -->
 </nav>
