--- a/views/shop/index.hbs
+++ b/views/shop/index.hbs
@@ -6,7 +6,7 @@
                 <img src={{ this.imagePath }} alt="..." class="img-responsive">
                 <div class="caption">
                     <h3> {{ this.title }} </h3>
-                    <p class="description">{{ this.description }} </p>
+                    <p class="description">Description: <br/> {{ this.description }} </p>
                     <div class="clearfix">
                         <div class="price pull-left">${{ this.price }} </div>
                         <a href="#" class="btn btn-success pull-right" role="button">Buy</a>
