--- a/views/shop/index.hbs
+++ b/views/shop/index.hbs
@@ -1,24 +1,24 @@
-<h2> Top Products <h2>
+<h2> Top Products </h2>
 {{# each cacheProducts }}
-             <div class="row">
-                 {{# each this }}
-                     <div class="col-sm-6 col-md-4">
-                     <div class="thumbnail">
-                         <img src={{ this.imagePath }} alt="..." class="img-responsive">
-                         <div class="caption">
-                             <h3> {{ this.title }} </h3>
-                             <p class="description">{{ this.description }} </p>
-                             <div class="clearfix">
-                                 <div class="price pull-left">{{ this.price }} </div>
-                                 <a href="#" class="btn btn-success pull-right" role="button">Buy</a>
-                             </div>
-                         </div>
-                     </div>
-                 </div>
-                 {{/each}}
-             </div>
+    <div class="row">
+        {{# each this }}
+            <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src={{ this.imagePath }} alt="..." class="img-responsive">
+                <div class="caption">
+                    <h3> {{ this.title }} </h3>
+                    <p class="description">{{ this.description }} </p>
+                    <div class="clearfix">
+                        <div class="price pull-left">{{ this.price }} </div>
+                        <a href="#" class="btn btn-success pull-right" role="button">Buy</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        {{/each}}
+    </div>
 {{/each}}
-<h2>All Products <h2>
+<h2>All Products </h2>
 {{# each products }}
     <div class="row">
         {{# each this }}
